
--Support for paging through items in Editor pickers with [ and ] keys.

--Shaved 13% off loading time by reducing repeat memory allocations when
  expanding transition bank and object bank with runtime-generated elements. 
  Also optimized a few other loading hotspots.  Fixes #661

--Shaved another 10% off loading time by optimizing inner loop of kerning
  calculation during font loading.


Server Fixes

--Server converts all incoming client emails to lower case.  Fixes #659





Version 350    2020-July-16

--Support for +causeAutoOrientV tag (opposite of +causeAutoOrientH).

--Fixed color of background box in category editor to not interfere with long
  text.

--Support for -wall tag in object description, to push what would otherwise be
  drawn in the wall layer into the non-wall layer (so that pipes through fences
  can visually connect properly, and not overlap other pipes in a weird way).





Server Fixes

--Fixed rare crash when client sends an illegal chat character (impossible with
  official client) when character is drunk.



Version 348    2020-July-10

--Support for moving objects that leave floors behind, or land on and change
  an existing floor.

--Support for road classes, so that logical road can continue across road
  variations (corners, t-junctions, etc.).

--Fixed crash when loading an empty category.

--Fixed biome ground tile glitch when floor doesn't completely cover tile
  square.




Version 346   2020-July-3

--Forbid backslash and quotes in login email address in client.

--Forbid player flipping when a 0-speed object is held (like cast fishing
  pole).  Fixes #644

--Object editor preserves use vanish when inserting an object.

--Category editor preserves index, if possible, when switching categories.

--Tech tree button (to open Onetech in browser) on login screen.  Better tool
  tips for several buttons.  Fixes #647





Server Fixes

--Fixed crash when someone right-clicks a full basket on a table.
