@@ -16,10 +16,12 @@ Version 352    ???
   calculation during font loading.
 
 
+
 Server Fixes
 
 --Server converts all incoming client emails to lower case.  Fixes #659
 
+--Fixed rounding errors in computing fitness ranking.  Fixes #660
 
 
 
